--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
      <header class="container">
-          <nav class="navbar navbar-expand-lg bg-light">
+          <nav class="navbar fixed-top navbar-expand-lg bg-light">
                <div class="container">
                     <a class="navbar-brand" href="#"><img src="./images/logo.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -22,23 +22,23 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                               <li class="nav-item">
-                                   <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                   <a class="nav-link active" aria-current="page" href="#home">Home</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">Shoes</a>
+                                   <a class="nav-link" href="#shoes">Shoes</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">Backpack</a>
+                                   <a class="nav-link" href="#backpack">Backpack</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">Subscribe</a>
+                                   <a class="nav-link" href="#subscribe">Subscribe</a>
                               </li>
                          </ul>
                     </div>
                </div>
           </nav>
           <!-- slider -->
-          <section class="mt-5">
+          <section class="mt-5" id="home">
                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner bg-info  border rounded p-5">
                          <div class="carousel-item active">
@@ -75,119 +75,148 @@
      </header>
      <main>
           <!-- Catagories -->
-          <section class="container my-5">
+          <section class="container my-5"">
                <h2>Catagories</h2>
                <div class="container text-center">
                     <div class="row g-2">
-                      <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
-                         <h1 class="text-white">Watch</h1>
-                         <img src="./images/categories/watch.png" alt="">
-                        </div>
-                      </div>
-                      <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-success d-flex align-items-center justify-content-around border rounded-3">
-                         <h1 class="text-white">Watch</h1>
-                         <img src="./images/categories/bag.png" alt="">
-                        </div>
-                      </div>
-                      <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded-3">
-                         <h1 class="text-white">Watch</h1>
-                         <img src="./images/categories/shoes.png" alt="">
-                        </div>
-                      </div>
+                         <div class="col-lg-4 col-md-6 col-sm-12">
+                              <div
+                                   class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
+                                   <h1 class="text-white">Watch</h1>
+                                   <img src="./images/categories/watch.png" alt="">
+                              </div>
+                         </div>
+                         <div class="col-lg-4 col-md-6 col-sm-12">
+                              <div
+                                   class="p-3 border bg-success d-flex align-items-center justify-content-around border rounded-3">
+                                   <h1 class="text-white">Watch</h1>
+                                   <img src="./images/categories/bag.png" alt="">
+                              </div>
+                         </div>
+                         <div class="col-lg-4 col-md-6 col-sm-12">
+                              <div
+                                   class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded-3">
+                                   <h1 class="text-white">Watch</h1>
+                                   <img src="./images/categories/shoes.png" alt="">
+                              </div>
+                         </div>
                     </div>
-                  </div>
+               </div>
           </section>
           <!-- Shoes -->
-          <section class="container my-5" >
+          <section class="container my-5" id="shoes">
                <h2>Shoes</h2>
                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
-                      <div class="card border-0 shadow-lg h-100">
-                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Supply 350</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg h-100">
+                              <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Supply 350</h5>
+                                   <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
                     <div class="col">
-                      <div class="card border-0 shadow-lg  h-100">
-                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Nike 360</h5>
-                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg  h-100">
+                              <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Nike 360</h5>
+                                   <p class="card-text">This card has supporting text below as a natural lead-in to
+                                        additional content.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
                     <div class="col">
-                      <div class="card border-0 shadow-lg  h-100">
-                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Red Airmax</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg  h-100">
+                              <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Red Airmax</h5>
+                                   <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This card has even longer content than the first
+                                        to show that equal height action.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
-                  </div>
+               </div>
           </section>
           <!-- Backpack -->
-          <section class="container my-5" >
+          <section class="container my-5" id="backpack">
                <h2>Backpack</h2>
                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
-                      <div class="card border-0 shadow-lg h-100">
-                        <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Red Lalu</h5>
-                          <h2>$150</h2>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg h-100">
+                              <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Red Lalu</h5>
+                                   <h2>$150</h2>
+                                   <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
                     <div class="col">
-                      <div class="card border-0 shadow-lg  h-100">
-                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Nilu Bag</h5>
-                          <h2>$200</h2>
-                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg  h-100">
+                              <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Nilu Bag</h5>
+                                   <h2>$200</h2>
+                                   <p class="card-text">This card has supporting text below as a natural lead-in to
+                                        additional content.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
                     <div class="col">
-                      <div class="card border-0 shadow-lg  h-100">
-                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Kalu Mis</h5>
-                          <h2>$250</h2>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        </div>
-                        <div class="m-3">
-                         <div class="btn btn-warning">Buy Now</div>
-                        </div>
-                      </div>
+                         <div class="card border-0 shadow-lg  h-100">
+                              <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                   <h5 class="card-title">Kalu Mis</h5>
+                                   <h2>$250</h2>
+                                   <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This card has even longer content than the first
+                                        to show that equal height action.</p>
+                              </div>
+                              <div class="m-3">
+                                   <div class="btn btn-warning">Buy Now</div>
+                              </div>
+                         </div>
                     </div>
-                  </div>
+               </div>
+          </section>
+          <!-- subscribe -->
+          <section class="container d-flex justify-content-center bg-info rounded-3 align-items-center text-center" style="height: 300px;" id="subscribe">
+               <div>
+                    <h2>LET'S STAY IN TOUCH</h2>
+                    <p>Get updated on sale, special and more</p>
+                    <form>
+                         <div class="mb-2">
+                              <input type="email" class="form-control" id="exampleInputEmail1"
+                                   aria-describedby="emailHelp">
+                         </div>
+
+                         <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+               </div>
           </section>
      </main>
+     <footer class="mt-5 text-center">
+          <p><small>@2020 Panda Commerce. All right reserved. Sofia, Bulgaria</small></p>
+     </footer>
      <script src="./css/bootstrap.min.js"></script>
 </body>
 
