adding custom css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./css/bootstrap.min.css">
+     <link rel="stylesheet" href="./css/style.css">
      <title>Panda Commerce</title>
 </head>
 
@@ -40,7 +41,7 @@
           <!-- slider -->
           <section class="mt-5" id="home">
                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner bg-info  border rounded p-5">
+                    <div class="carousel-inner panda-bg-info  border rounded p-5">
                          <div class="carousel-item active">
                               <div class="row">
                                    <div class="col-lg-7 d-flex align-items-center">
@@ -49,7 +50,7 @@
                                              <p>This is the best headphone in the world for people who just want to
                                                   waste time in front of funky world</p>
                                              <h1>$420</h1>
-                                             <div class="btn btn-warning">
+                                             <div class="btn panda-btn-buy">
                                                   Buy Now
                                              </div>
                                         </div>
@@ -77,8 +78,8 @@
           <!-- Catagories -->
           <section class="container my-5"">
                <h2>Catagories</h2>
-               <div class="container text-center">
-                    <div class="row g-2">
+               <div class="container text-center catagories">
+                    <div class="row g-4">
                          <div class="col-lg-4 col-md-6 col-sm-12">
                               <div
                                    class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
@@ -116,7 +117,7 @@
                                         lead-in to additional content. This content is a little bit longer.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
@@ -129,7 +130,7 @@
                                         additional content.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
@@ -143,7 +144,7 @@
                                         to show that equal height action.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
@@ -163,7 +164,7 @@
                                         lead-in to additional content. This content is a little bit longer.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
@@ -177,7 +178,7 @@
                                         additional content.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
@@ -192,14 +193,14 @@
                                         to show that equal height action.</p>
                               </div>
                               <div class="m-3">
-                                   <div class="btn btn-warning">Buy Now</div>
+                                   <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
                     </div>
                </div>
           </section>
           <!-- subscribe -->
-          <section class="container d-flex justify-content-center bg-info rounded-3 align-items-center text-center" style="height: 300px;" id="subscribe">
+          <section class="container d-flex justify-content-center panda-bg-info rounded-3 align-items-center text-center" style="height: 300px;" id="subscribe">
                <div>
                     <h2>LET'S STAY IN TOUCH</h2>
                     <p>Get updated on sale, special and more</p>
