--- a/index.html
+++ b/index.html
@@ -41,37 +41,62 @@
           <!-- slider -->
           <section class="mt-5" id="home">
                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner panda-bg-info  border rounded p-5">
-                         <div class="carousel-item active">
-                              <div class="row">
-                                   <div class="col-lg-7 d-flex align-items-center">
-                                        <div>
-                                             <h2>Cool Dude headphone</h2>
-                                             <p>This is the best headphone in the world for people who just want to
-                                                  waste time in front of funky world</p>
-                                             <h1>$420</h1>
-                                             <div class="btn panda-btn-buy">
-                                                  Buy Now
-                                             </div>
-                                        </div>
-                                   </div>
-                                   <div class="col-lg-5">
-                                        <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                                   </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active panda-bg-info border rounded p-5">
+                        <div class="row">
+                         <div class="col-lg-7 d-flex align-items-center">
+                              <div>
+                              <h1>Cool Dude Headphone</h1>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
+                              <h1 class="price">$420</h1>
+                              <div class="btn panda-btn-buy">Buy Now</div>
                               </div>
                          </div>
+                         <div class="col-lg-5">
+                              <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                         </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item panda-bg-info border rounded p-5">
+                        <div class="row">
+                         <div class="col-lg-7 d-flex align-items-center">
+                              <div>
+                              <h1>Cool Dude Television</h1>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
+                              <h1 class="price">$490</h1>
+                              <div class="btn panda-btn-buy">Buy Now</div>
+                              </div>
+                         </div>
+                         <div class="col-lg-5">
+                              <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                         </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item panda-bg-info border rounded p-5">
+                        <div class="row">
+                         <div class="col-lg-7 d-flex align-items-center">
+                              <div>
+                              <h1>Cool Dude PS5</h1>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
+                              <h1 class="price">$530</h1>
+                              <div class="btn panda-btn-buy">Buy Now</div>
+                              </div>
+                         </div>
+                         <div class="col-lg-5">
+                              <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                         </div>
+                        </div>
+                      </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                         data-bs-slide="prev">
-                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                         <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                         data-bs-slide="next">
-                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                         <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
                     </button>
-               </div>
+                  </div>
           </section>
      </header>
      <main>
@@ -83,21 +108,21 @@
                          <div class="col-lg-4 col-md-6 col-sm-12">
                               <div
                                    class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1 class="text-white">Watch</h1>
+                                   <h1>Watch</h1>
                                    <img src="./images/categories/watch.png" alt="">
                               </div>
                          </div>
                          <div class="col-lg-4 col-md-6 col-sm-12">
                               <div
                                    class="p-3 border bg-success d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1 class="text-white">Watch</h1>
+                                   <h1>Watch</h1>
                                    <img src="./images/categories/bag.png" alt="">
                               </div>
                          </div>
                          <div class="col-lg-4 col-md-6 col-sm-12">
                               <div
                                    class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1 class="text-white">Watch</h1>
+                                   <h1>Watch</h1>
                                    <img src="./images/categories/shoes.png" alt="">
                               </div>
                          </div>
