--- a/index.html
+++ b/index.html
@@ -42,91 +42,99 @@
           <section class="mt-5" id="home">
                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                      <div class="carousel-item active panda-bg-info border rounded p-5">
-                        <div class="row">
-                         <div class="col-lg-7 d-flex align-items-center">
-                              <div>
-                              <h1>Cool Dude Headphone</h1>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
-                              <h1 class="price">$420</h1>
-                              <div class="btn panda-btn-buy">Buy Now</div>
+                         <div class="carousel-item active panda-bg-info border rounded p-5">
+                              <div class="row">
+                                   <div class="col-lg-7 d-flex align-items-center">
+                                        <div>
+                                             <h1>Cool Dude Headphone</h1>
+                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum
+                                                  accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.
+                                             </p>
+                                             <h1 class="price">$420</h1>
+                                             <div class="btn panda-btn-buy">Buy Now</div>
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-5">
+                                        <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                   </div>
                               </div>
                          </div>
-                         <div class="col-lg-5">
-                              <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
-                         </div>
-                        </div>
-                      </div>
-                      <div class="carousel-item panda-bg-info border rounded p-5">
-                        <div class="row">
-                         <div class="col-lg-7 d-flex align-items-center">
-                              <div>
-                              <h1>Cool Dude Television</h1>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
-                              <h1 class="price">$490</h1>
-                              <div class="btn panda-btn-buy">Buy Now</div>
+                         <div class="carousel-item panda-bg-info border rounded p-5">
+                              <div class="row">
+                                   <div class="col-lg-7 d-flex align-items-center">
+                                        <div>
+                                             <h1>Cool Dude Television</h1>
+                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum
+                                                  accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.
+                                             </p>
+                                             <h1 class="price">$490</h1>
+                                             <div class="btn panda-btn-buy">Buy Now</div>
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-5">
+                                        <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                                   </div>
                               </div>
                          </div>
-                         <div class="col-lg-5">
-                              <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
-                         </div>
-                        </div>
-                      </div>
-                      <div class="carousel-item panda-bg-info border rounded p-5">
-                        <div class="row">
-                         <div class="col-lg-7 d-flex align-items-center">
-                              <div>
-                              <h1>Cool Dude PS5</h1>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.</p>
-                              <h1 class="price">$530</h1>
-                              <div class="btn panda-btn-buy">Buy Now</div>
+                         <div class="carousel-item panda-bg-info border rounded p-5">
+                              <div class="row">
+                                   <div class="col-lg-7 d-flex align-items-center">
+                                        <div>
+                                             <h1>Cool Dude PS5</h1>
+                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam cum
+                                                  accusantium ab amet, quae sunt saepe impedit ex temporibus nostrum.
+                                             </p>
+                                             <h1 class="price">$530</h1>
+                                             <div class="btn panda-btn-buy">Buy Now</div>
+                                        </div>
+                                   </div>
+                                   <div class="col-lg-5">
+                                        <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                   </div>
                               </div>
                          </div>
-                         <div class="col-lg-5">
-                              <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
-                         </div>
-                        </div>
-                      </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                         data-bs-slide="prev">
+                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                         data-bs-slide="next">
+                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                         <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+               </div>
           </section>
      </header>
      <main>
           <!-- Catagories -->
           <section class="container my-5"">
                <h2>Catagories</h2>
-               <div class="container text-center catagories">
-                    <div class="row g-4">
-                         <div class="col-lg-4 col-md-6 col-sm-12">
-                              <div
-                                   class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1>Watch</h1>
-                                   <img src="./images/categories/watch.png" alt="">
-                              </div>
-                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12">
-                              <div
-                                   class="p-3 border bg-success d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1>Watch</h1>
-                                   <img src="./images/categories/bag.png" alt="">
-                              </div>
-                         </div>
-                         <div class="col-lg-4 col-md-6 col-sm-12">
-                              <div
-                                   class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded-3">
-                                   <h1>Watch</h1>
-                                   <img src="./images/categories/shoes.png" alt="">
-                              </div>
+               <div class=" container text-center catagories">
+               <div class="row g-4">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                         <div
+                              class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded-3">
+                              <h1>Watch</h1>
+                              <img src="./images/categories/watch.png" alt="">
                          </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                         <div
+                              class="p-3 border bg-success d-flex align-items-center justify-content-around border rounded-3">
+                              <h1>Watch</h1>
+                              <img src="./images/categories/bag.png" alt="">
+                         </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                         <div
+                              class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded-3">
+                              <h1>Watch</h1>
+                              <img src="./images/categories/shoes.png" alt="">
+                         </div>
+                    </div>
+               </div>
                </div>
           </section>
           <!-- Shoes -->
@@ -225,7 +233,9 @@
                </div>
           </section>
           <!-- subscribe -->
-          <section class="container d-flex justify-content-center panda-bg-info rounded-3 align-items-center text-center" style="height: 300px;" id="subscribe">
+          <section
+               class="container d-flex justify-content-center panda-bg-info rounded-3 align-items-center text-center"
+               style="height: 300px;" id="subscribe">
                <div>
                     <h2>LET'S STAY IN TOUCH</h2>
                     <p>Get updated on sale, special and more</p>
@@ -243,6 +253,7 @@
      <footer class="mt-5 text-center">
           <p><small>@2020 Panda Commerce. All right reserved. Sofia, Bulgaria</small></p>
      </footer>
+     <script src="./panda.js"></script>
      <script src="./css/bootstrap.min.js"></script>
 </body>
 
